testdata/step_15/valid/forward_decl_multi_arg.c
foo(a, b);

main() {
    return foo(1, 2);
}

foo(x, y){
    return x - y;
}