testdata/step_15/invalid/declaration_mismatch_2.c
foo(a, b);

main() {
    return 5;
}

foo(a) {
    return 4;
}